WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277133
[UnifiedPDF] [macOS] Marquee selection does not show cross cursor
https://bugs.webkit.org/show_bug.cgi?id=277133
Summary
[UnifiedPDF] [macOS] Marquee selection does not show cross cursor
Abrar Rahman Protyasha
Reported
2024-07-26 02:35:04 PDT
rdar://131945594
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-07-26 02:39:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31276
EWS
Comment 2
2024-07-26 15:37:16 PDT
Committed
281424@main
(ab8fab454e1b): <
https://commits.webkit.org/281424@main
> Reviewed commits have been landed. Closing PR #31276 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug