[UnifiedPDF] [macOS] Marquee selection does not show cross cursor https://bugs.webkit.org/show_bug.cgi?id=277133 rdar://131945594

Reviewed by Aditya Keerthi.

When we update our cursor during a selection drag, we consult the
selection tracking data to know whether we are in a marquee selection.
If so, we present a cross cursor instead of the usual I-beam.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::freezeCursorDuringSelectionDragIfNeeded):
(WebKit::UnifiedPDFPlugin::continueTrackingSelection):

Canonical link: https://commits.webkit.org/281424@main